--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,5 +1,4 @@
 /**index.wxss**/
-
 .swiper-box{
   width: 100%;
   height: 400rpx;
@@ -10,7 +9,6 @@
 }  
 .nav-box{
   height: 160rpx;
-  border: 1px solid #ccc;
   background-color: white;
   display: flex;
   flex-direction:row;
@@ -30,7 +28,49 @@
   width: 60rpx;
   height: 60rpx;
   border-radius: 50%;
-  display: block;
- 
+  display: block; 
   padding: 20rpx;
+}
+.wn-tuijian{
+  background:#EAEAEA;
+  font-size: 28rpx;
+  height:40rpx;
+  line-height:40rpx;
+  padding: 10rpx;
+}
+.wn-tuijian text{
+  border-left: 10rpx blue solid;
+  padding-left: 10rpx;
+}
+.tuijian{
+  font-size: 28rpx;
+  background-color: #EAEAEA;
+
+}
+.tuijian-container{
+  height: 600rpx;
+  background-color: white;
+  margin: 0 14rpx 20rpx 14rpx;
+  border-radius: 10rpx;
+  
+  
+}
+.tuijian-container image{
+  margin-top: 10rpx;
+  height: 250rpx;
+}
+.tuijian-container-text{
+
+}
+.tuijian-container-header{
+  padding: 10rpx ;
+
+}
+.tuijian-container-header text:nth-child(1){
+  float: left;
+  padding-left: 10rpx;
+}
+.tuijian-container-header text:nth-child(2){
+  float: right;
+  color: #6699ff;
 }
