--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,20 +1,58 @@
 <swiper class="swiper-box" indicator-dots="{{indicatorDots}}" autoplay="{{autoplay}}" interval="{{interval}}" duration="{{duration}}">    
-    <block wx:for="{{imgUrls}}" wx:key="link">    
+    <block wx:for="{{adverInfo}}" wx:key="link">    
       <swiper-item>    
           <navigator url="{{item.link}}" hover-class="navigator-hover">    
-          <image src="{{item.url}}" class="slide-image" width="400" height="150"/>    
+          <image src="{{item.imgUrl}}" class="slide-image"/>    
           </navigator>     
       </swiper-item>    
     </block>    
 </swiper>   
 <view class="nav-box">
-  <block wx:for="{{navIcon}}" wx:key="navIcon" wx:key="title">
+  <block wx:for="{{centerNavInfo}}"  wx:key="title">
     <view class="nav-view">
       <image class="nav-img" src="{{item.imgUrl}}" style="background-color: {{item.bgcolor}};"></image>
       <text>{{item.title}}</text>
     </view>
   </block> 
 </view>
-<view class="tuijian">
+<view class="wn-tuijian" style="">
+  <text>为您推荐</text>
+</view>
 
+<view class="tuijian">
+  <view class="tuijian-container">
+    <view class="tuijian-container-header">
+      <text>高效微信小程序开发大赛</text>
+      <text>详情 ></text>
+    </view>
+    <image src="https://ss3.baidu.com/9fo3dSag_xI4khGko9WTAnF6hhy/image/h%3D300/sign=84337ed7c7134954611eee64664f92dd/ac6eddc451da81cbe337459b5e66d01608243197.jpg" class="slide-image"/> 
+   
+      <text class='tuijian-container-text'>    
+        简介
+        本次大赛是基于微信小程序平台的创新应用开发设计竞赛。
+        大赛面向全球高校在校生开放，
+        旨在通过竞赛的方式提升学生进行Web应用的设计与开发能力，
+        
+      </text>
+    
+  </view>
+
+  <view class="tuijian-container">
+    <view class="tuijian-container-header">
+      <text>高效微信小程序开发大赛</text>
+      <text>详情 ></text>
+    </view>
+    <image src="https://ss3.baidu.com/9fo3dSag_xI4khGko9WTAnF6hhy/image/h%3D300/sign=84337ed7c7134954611eee64664f92dd/ac6eddc451da81cbe337459b5e66d01608243197.jpg" class="slide-image"/> 
+    
+      <text >    
+        简介
+        本次大赛是基于微信小程序平台的创新应用开发设计竞赛。
+        大赛面向全球高校在校生开放，
+        旨在通过竞赛的方式提升学生进行Web应用的设计与开发能力，
+        特别是运用微信生态小程序平台开发技术进行创新实践的能力，
+        实现以赛促学、以赛促教、以赛促用，推动微信生态体系的人才培养和产学研用。    
+      </text>
+    
+  </view>
+  
 </view>
