--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,5 +1,5 @@
 <swiper class="swiper-box" indicator-dots="{{indicatorDots}}" autoplay="{{autoplay}}" interval="{{interval}}" duration="{{duration}}">    
-    <block wx:for="{{adverInfo}}" wx:key="link">    
+    <block wx:for="{{adverInfo}}" wx:key="item.link">    
       <swiper-item>    
           <navigator url="{{item.link}}" hover-class="navigator-hover">    
           <image src="{{item.imgUrl}}" class="slide-image"/>  
@@ -8,7 +8,7 @@
     </block>    
 </swiper>   
 <view class="nav-box">
-  <block wx:for="{{centerNavInfo}}"  wx:key="title">
+  <block wx:for="{{centerNavInfo}}"  wx:key="item.imgUrl">
     <view class="nav-view">
       <image class="nav-img" src="{{item.imgUrl}}" style="background-color: {{item.bgcolor}};"></image>
       <text>{{item.title}}</text>
@@ -21,18 +21,15 @@
   <view class="wn-tuijian" style="">
     <text>为您推荐</text>
   </view>
-  <block wx:for="{{5}}"  wx:key="title">
-    <view class="tuijian-container">
+  <block wx:for="{{competitionInfo}}"  wx:key="item.title" >
+    <view class="tuijian-container" bindtap="goComDetails" data-id="{{item.Id}}"  data-title="{{item.title}}" data-imgUrl="{{item.imgUrl}}">
       <view class="tuijian-container-header">
-        <text>高效微信小程序开发大赛</text>
+        <text>{{item.title}}</text>
         <text>详情 ></text>
       </view>
-          <image src="https://ps.ssl.qhimg.com/dmfd/420_207_/t013fc60fdf3eaed22d.jpg" />       
-        <text class='tuijian-container-text' >简介
-          本次大赛是基于微信小程序平台的创新应用开发设计竞赛。
-          大赛面向全球高校在校生开放，
-          旨在通过竞赛的方式提升学生进行Web应用的设计与开发能力，          
-        </text>      
+        <text class='num'>{{index+1}}</text>
+        <image src="{{item.imgUrl}}" />       
+        <text class='tuijian-container-text' >{{item.abstract}}</text>      
     </view>
   </block> 
   
