--- a/pages/index/nav0/nav0.wxml
+++ b/pages/index/nav0/nav0.wxml
@@ -1,3 +1,4 @@
+
 <loading hidden="{{hiddenLoading}}">
   加载中...
  </loading>
@@ -9,15 +10,21 @@
   <view class="wn-tuijian" style="">
     <text>为您推荐</text>
   </view>
-  <block wx:for="{{nav0Item}}"  wx:key="item.title" >
-    <view class="tuijian-container" bindtap="goComDetails" data-com_id="{{item.comId}}"  data-title="{{item.title}}" data-imgUrl="{{item.imgUrl}}">
-      <view class="tuijian-container-header">
-        <text>{{item.title}}</text>
-        <text>详情 ></text>
-      </view>
-        <text class='num'>{{index+1}}</text>
-        <image src="{{item.imgUrl}}" />       
-        <text class='tuijian-container-text' >{{item.abstract}}</text>      
-    </view>
-  </block>   
+
+  <scroll-view class='scroll' scroll-y="true" bindscrolltolower="searchScrollLower" >  
+      <block wx:for="{{nav0Item}}"  wx:key="item.title" >
+        <view class="tuijian-container" bindtap="goComDetails" data-com_id="{{item.comId}}"  data-title="{{item.title}}" data-imgUrl="{{item.imgUrl}}">
+          <view class="tuijian-container-header">
+            <text>{{item.title}}</text>
+            <text>详情 ></text>
+          </view>
+            <text class='num'>{{index+1}}</text>
+            <image src="{{item.imgUrl}}" />       
+            <text class='tuijian-container-text' >{{item.abstract}}</text>      
+        </view>
+      </block>    
+      <view class='onload'  hidden="{{!searchLoadingComplete}}" >已加载全部</view>  
+  </scroll-view> 
+
+  
 </view>
