--- a/pages/index/nav0/nav0.wxss
+++ b/pages/index/nav0/nav0.wxss
@@ -1,4 +1,3 @@
-
 .header{
   text-align: center;
   font-size: 40rpx;
@@ -11,4 +10,11 @@
   border-radius: 20rpx;
   color: white;
   padding: 20rpx;  
+}
+.scroll{
+  height:990rpx;
+}
+.onload{
+  text-align: center;
+  margin-bottom: 20rpx;
 }
