--- a/pages/index/nav3/nav3.wxss
+++ b/pages/index/nav3/nav3.wxss
@@ -1,1 +1,20 @@
-/* pages/index/nav3/nav3.wxss */
+.header{
+  text-align: center;
+  font-size: 40rpx;
+  margin: 0 20rpx;
+  padding: 20rpx 0;
+  
+}
+.header view{
+  background: #84C1FF;
+  border-radius: 20rpx;
+  color: white;
+  padding: 20rpx;  
+}
+.scroll{
+  height:990rpx;
+}
+.onload{
+  text-align: center;
+  margin-bottom: 20rpx;
+}
