--- a/pages/index/nav1/nav1.wxml
+++ b/pages/index/nav1/nav1.wxml
@@ -23,6 +23,7 @@
             <text class='tuijian-container-text' >{{item.abstract}}</text>      
         </view>
       </block>    
+      <view class='onload'  hidden="{{!onLoading}}" >加载中</view>
       <view class='onload'  hidden="{{!searchLoadingComplete}}" >已加载全部</view>  
   </scroll-view> 
 
