--- a/pages/me/me.wxml
+++ b/pages/me/me.wxml
@@ -34,12 +34,13 @@
         <text >5</text>
           <image class="main-item-next"  src="../../images/icon/next.png"></image>
       </view>
+      <!--
       <view class="main-item">
         <image class="main-item-icon"  src="../../images/icon/fx1.png"></image>
         浏览历史   
         <text >23</text>
           <image class="main-item-next"  src="../../images/icon/next.png"></image>
-      </view>
+      </view>-->
 
     </view>
     <view class="line"></view>
